started fixing warnings